k8s/overlays/staging/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-ingress
  namespace: url-shortener
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Redirect HTTP to HTTPS
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - k8s-url.khoa.email
        - www.k8s-url.khoa.email
      secretName: url-shortener-tls-secret
  rules:
    - host: k8s-url.khoa.email
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-fe-service
                port:
                  number: 3000
    - host: www.k8s-url.khoa.email
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-fe-service
                port:
                  number: 3000
